# Fasanara-Final-Assessment

./: .gitignore  README.md  app.py  data-description.md  instructions.md  pyproject.toml
.streamlit/: config.toml
EDA/: 01_train_companies_eda.ipynb  02_train_narratives_eda.ipynb  03_train_outcomes_eda.ipynb  04_scoring_companies_eda.ipynb
data/: scoring_companies.csv  train_companies.csv  train_narratives.csv  train_outcomes.csv
outputs/: predictions.csv
pipeline/: 01_data_processing.ipynb  01_data_processing.py  02_modeling.ipynb  02_modeling.py  03_generate_explanations.py
