[project]
name = "fasa-credit-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.40.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "shap>=0.52.0",
    "streamlit>=1.58.0",
    "xgboost>=3.2.0",
]
